# coh-ucs-tools

./: .dockerignore  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  build_arabic.py  build_french.py  build_german.py  build_italian.py  build_polish.py  build_spanish.py  cli.py  depot_downloader.py  docker-compose.yml  duplicate_probe.py  fly.toml  game_profiles.py  locale_build.py  locale_coverage.py  merge.py  parser.py  patch_chain.py  po_io.py  pyproject.toml  requirements.txt  sga_reader.py  translate.py  ucs_analysis.py  ucs_stats.py  validator.py  verification_checklist.py
.github/workflows/: fly-deploy.yml  pages.yml  test.yml
config/defaults/: paths.env.example
desktop/: README.md
docs/: API.md  BACKLOG.md  DEPLOY.md  PROJECT_REPORT.md  README.md
docs/api/: reference.md
docs/architecture/: STRUCTURE.md
docs/deployment/: guide.md
scripts/: audit_routes.py  build_static.py  download_fonts.py  e2e_playwright.py  expand_i18n.py  generate_icons.py  wiki_screenshots.py
scripts/development/: audit_routes.py  e2e_playwright.py  run_server.py  wiki_screenshots.py
scripts/maintenance/: expand_i18n.py
scripts/migration/: migrate_to_src.py
src/coh_ucs_tools/: __init__.py
src/coh_ucs_tools/analysis/: __init__.py  diff.py  patch_chain.py  stats.py
src/coh_ucs_tools/cli/: __init__.py
src/coh_ucs_tools/config/: __init__.py  paths.py
src/coh_ucs_tools/core/: __init__.py  merge.py  parser.py  text.py  validator.py
src/coh_ucs_tools/io/: __init__.py  po.py
src/coh_ucs_tools/locale/: __init__.py  build.py  coverage.py
src/coh_ucs_tools/locale/builders/: __init__.py  arabic.py  french.py  (+4 more)
src/coh_ucs_tools/profiles/: __init__.py  game.py
src/coh_ucs_tools/tools/: __init__.py  depot.py  duplicate_probe.py  translate.py  verification.py
src/coh_ucs_tools/web/: __init__.py  auth.py  db.py  deps.py  jobs.py  main.py  routes.py  seo.py  services.py  store.py
tests/: __init__.py  conftest.py  fixture_ucs.py  test_analysis.py  test_build_french.py  test_deploy_hybrid.py  test_extensions.py  test_i18n_static.py  test_locale_build.py  test_motion_static.py  test_parser_hardening.py  test_route_scope_static.py  test_router_static.py  test_seo.py  test_ucs_tools.py  test_verification_checklist.py  test_wave3.py  test_wave4.py  test_wave5.py  test_wave6.py  test_wave7.py  test_wave8.py  test_wave9.py  test_webapp.py  test_webapp_extended.py
tests/api/: test_deploy_hybrid.py  test_seo.py  test_webapp.py  test_webapp_extended.py
tests/fixtures/: ucs.py
tests/integration/: test_real_storage_startup.py
tests/static/: test_i18n_static.py  test_motion_static.py  test_route_scope_static.py  test_router_static.py
tests/unit/: test_analysis.py  test_build_french.py  test_depot_auth_parser.py  test_extensions.py  test_game_profiles_sga.py  test_locale_build.py  test_locale_coverage_diff.py  test_parser_hardening.py  test_sga_patch_depot.py  test_sga_webhooks_profiles.py  test_ucs_tools.py  test_verification_checklist.py  test_webhook_delivery.py  test_webhook_retry_sessions.py
webapp/: __init__.py  api.py  auth.py  auth_routes.py  db.py  deps.py  jobs.py  main.py  models.py  rate_limit.py  routes_extended.py  seo.py  services.py  store.py
webapp/static/: index.html  manifest.json  service-worker.js
webapp/static/css/: app.css  fonts.css  motion.css
webapp/static/i18n/: ar.json  en.json  fr.json
webapp/static/js/: app.js  config.js  core.js  features.js  hero.js  i18n.js  motion.js  routeScope.js  router.js  seo.js  ucs-parse.js
(+13 files in other folders)
